--- a/form-request.html
+++ b/form-request.html
@@ -81,8 +81,8 @@ button{
   <h2 id="header-text"></h2>
 
   <div id="info-text">
-    Silakan request jadwal sesuai keperluan.<br>
-    Data bisa direvisi selama periode masih dibuka.
+    Silakan Request Jadwal sesuai keperluan saja.<br>
+    Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak!
   </div>
 
   <div id="loading">⏳ Memuat data...</div>
@@ -238,3 +238,4 @@ requestForm.addEventListener("submit",async e=>{
 </script>
 </body>
 </html>
+
